Add missing references

--- a/src/TODO
+++ b/src/TODO
@@ -1,6 +1,8 @@
 Proofreading August 2016
 ========================
 
+[-] Create web page for book: fenicsproject.org/tutorial
+    Fix later
 [-] MSA: Add example on using UFL for manufactured solutions
     Not done, but skip for now
 [x] Comment from Jack Hale: include raw docker command
@@ -17,8 +19,8 @@ Proofreading August 2016
 [x] Look at some remaining issues in red in book
 [x] Use alignat in equations
 [x] Consistent bold font vectors?
-[ ] Check that we are not missing important references: DOLFIN paper
-[ ] Create web page for book: fenicsproject.org/tutorial
+[x] Check that we are not missing important references: DOLFIN paper
+[ ] Check numbering of codes
 [x] Need to add instructions for how to send feedback and report typos
     https://github.com/hplgit/fenics-tutorial
 [x] Edit 'poisson': 'ft01_poisson',
