--- a/src/TODO
+++ b/src/TODO
@@ -5,24 +5,6 @@ Proofreading August 2016
     Fix later
 [-] MSA: Add example on using UFL for manufactured solutions
     Not done, but skip for now
-[x] Comment from Jack Hale: include raw docker command
-[x] Comment from Jack Hale: move note on plotting docker closer to first plot
-[ ] Comment from Marco Morandi 2016-09-23: add details on div sigma
-[x] MSA: numerical integration dx(degree=q)
-[x] MSA: example with sin(x[0]) instead of Expression
-[x] MSA: dot inner can be written as u**2
-[x] MSA: page 108 text outside box
-[x] MSA: page 101 fenics.sin calls math.sin if arg not symbolic
-[x] MSA: page 82 use triangle without the quotes
-[x] MSA: Expression and degree argument, page 30, 91-94, 120, 124, 125, 127
-[x] Refer to functions as `foo` if arguments are not important
-[x] Look at some remaining issues in red in book
-[x] Use alignat in equations
-[x] Consistent bold font vectors?
-[x] Check that we are not missing important references: DOLFIN paper
-[ ] Check numbering of codes
-[x] Need to add instructions for how to send feedback and report typos
-    https://github.com/hplgit/fenics-tutorial
 [x] Edit 'poisson': 'ft01_poisson',
 [x] Edit 'poisson_membrane': 'ft02_poisson_membrane',
 [x] Edit 'poisson_solver': 'ft03_poisson_solver',
@@ -39,6 +21,24 @@ Proofreading August 2016
 [ ] Renumber to 0, 1, 2 in NS and reaction examples
 [ ] Rework bcs as list of tuples in poisson_bcs.py
 [ ] Rework BoxField.py and rename to boxfield.py
+[ ] Check numbering of codes
+[ ] Comment Marco Morandi 2016-09-23: add details on div sigma
+[x] Comment Jack Hale: include raw docker command
+[x] Comment Jack Hale: move note on plotting docker closer to first plot
+[x] MSA: numerical integration dx(degree=q)
+[x] MSA: example with sin(x[0]) instead of Expression
+[x] MSA: dot inner can be written as u**2
+[x] MSA: page 108 text outside box
+[x] MSA: page 101 fenics.sin calls math.sin if arg not symbolic
+[x] MSA: page 82 use triangle without the quotes
+[x] MSA: Expression and degree argument, page 30, 91-94, 120, 124, 125, 127
+[x] Refer to functions as `foo` if arguments are not important
+[x] Look at some remaining issues in red in book
+[x] Use alignat in equations
+[x] Consistent bold font vectors?
+[x] Check that we are not missing important references: DOLFIN paper
+[x] Need to add instructions for how to send feedback and report typos
+    https://github.com/hplgit/fenics-tutorial
 [x] Remaining poisson_function --> poisson_solver
 [x] Why CamelCase for BoxField? It's a Python module, so better name
     it boxfield? Yes AL will fix.
