--- a/src/TODO
+++ b/src/TODO
@@ -22,7 +22,7 @@ Proofreading August 2016
 [ ] Rework bcs as list of tuples in poisson_bcs.py
 [ ] Rework BoxField.py and rename to boxfield.py
 [ ] Check numbering of codes
-[ ] Comment Marco Morandi 2016-09-23: add details on div sigma
+[x] Comment Marco Morandi 2016-09-23: add details on div sigma
 [x] Comment Jack Hale: include raw docker command
 [x] Comment Jack Hale: move note on plotting docker closer to first plot
 [x] MSA: numerical integration dx(degree=q)
