Some more fixes

--- a/src/TODO
+++ b/src/TODO
@@ -12,13 +12,13 @@ Proofreading August 2016
 [x] Edit 'heat_gaussian': 'ft05_heat_gaussian',
 [x] Edit 'poisson_nonlinear': 'ft06_poisson_nonlinear',
 [x] Edit 'elasticity': 'ft07_elasticity',
-[ ] Edit 'navier_stokes_channel': 'ft08_navier_stokes_channel',
-[ ] Edit 'navier_stokes_cylinder': 'ft09_navier_stokes_cylinder',
+[x] Edit 'navier_stokes_channel': 'ft08_navier_stokes_channel',
+[x] Edit 'navier_stokes_cylinder': 'ft09_navier_stokes_cylinder',
 [ ] Edit 'reaction_system': 'ft10_reaction_system',
 [ ] Edit 'poisson_bcs': 'ft11_poisson_bcs',
 [ ] Edit 'magnetostatics': 'ft12_magnetostatics',
 [ ] Edit 'poisson_iterative': 'ft13_poisson_iterative'
-[ ] Renumber to 0, 1, 2 in NS and reaction examples
+[-] Renumber to 0, 1, 2 in NS and reaction examples
 [ ] Rework bcs as list of tuples in poisson_bcs.py
 [ ] Rework BoxField.py and rename to boxfield.py
 [ ] Check numbering of codes
