--- a/src/TODO
+++ b/src/TODO
@@ -14,14 +14,14 @@ Proofreading August 2016
 [x] Edit 'elasticity': 'ft07_elasticity',
 [x] Edit 'navier_stokes_channel': 'ft08_navier_stokes_channel',
 [x] Edit 'navier_stokes_cylinder': 'ft09_navier_stokes_cylinder',
-[ ] Edit 'reaction_system': 'ft10_reaction_system',
+[x] Edit 'reaction_system': 'ft10_reaction_system',
+[x] Edit 'magnetostatics': 'ft12_magnetostatics',
 [ ] Edit 'poisson_bcs': 'ft11_poisson_bcs',
-[ ] Edit 'magnetostatics': 'ft12_magnetostatics',
 [ ] Edit 'poisson_iterative': 'ft13_poisson_iterative'
-[-] Renumber to 0, 1, 2 in NS and reaction examples
 [ ] Rework bcs as list of tuples in poisson_bcs.py
 [ ] Rework BoxField.py and rename to boxfield.py
 [ ] Check numbering of codes
+[-] Renumber to 0, 1, 2 in NS and reaction examples
 [x] Comment Marco Morandi 2016-09-23: add details on div sigma
 [x] Comment Jack Hale: include raw docker command
 [x] Comment Jack Hale: move note on plotting docker closer to first plot
