Fix comment by Corrado Maurino

--- a/src/TODO
+++ b/src/TODO
@@ -5,6 +5,7 @@ Proofreading August 2016
     Fix later
 [-] MSA: Add example on using UFL for manufactured solutions
     Not done, but skip for now
+[x] Page 56 lambda should be lambda + mu
 [x] Edit 'poisson': 'ft01_poisson',
 [x] Edit 'poisson_membrane': 'ft02_poisson_membrane',
 [x] Edit 'poisson_solver': 'ft03_poisson_solver',
