Update TODO list

--- a/src/TODO
+++ b/src/TODO
@@ -17,10 +17,11 @@ Proofreading August 2016
 [x] Edit 'navier_stokes_cylinder': 'ft09_navier_stokes_cylinder',
 [x] Edit 'reaction_system': 'ft10_reaction_system',
 [x] Edit 'magnetostatics': 'ft12_magnetostatics',
-[ ] Edit 'poisson_bcs': 'ft11_poisson_bcs',
+[x] Edit 'poisson_bcs': 'ft11_poisson_bcs',
 [ ] Edit 'poisson_iterative': 'ft13_poisson_iterative'
-[ ] Rework bcs as list of tuples in poisson_bcs.py
-[ ] Rework BoxField.py and rename to boxfield.py
+[-] Rework bcs as list of tuples in poisson_bcs.py
+[x] Rework BoxField.py and rename to boxfield.py
+[ ] Rewrite section on BoxField
 [ ] Check numbering of codes
 [-] Renumber to 0, 1, 2 in NS and reaction examples
 [x] Comment Marco Morandi 2016-09-23: add details on div sigma
