--- a/src/TODO
+++ b/src/TODO
@@ -1,6 +1,9 @@
 Proofreading August 2016
 ========================
 
+[ ] Check numbering of codes
+[ ] Check final chapter with poisson_extended
+[ ] Check index
 [-] Create web page for book: fenicsproject.org/tutorial
     Fix later
 [-] MSA: Add example on using UFL for manufactured solutions
@@ -18,11 +21,10 @@ Proofreading August 2016
 [x] Edit 'reaction_system': 'ft10_reaction_system',
 [x] Edit 'magnetostatics': 'ft12_magnetostatics',
 [x] Edit 'poisson_bcs': 'ft11_poisson_bcs',
-[ ] Edit 'poisson_iterative': 'ft13_poisson_iterative'
+[x] Edit 'poisson_iterative': 'ft13_poisson_iterative'
 [-] Rework bcs as list of tuples in poisson_bcs.py
 [x] Rework BoxField.py and rename to boxfield.py
-[ ] Rewrite section on BoxField
-[ ] Check numbering of codes
+[x] Rewrite section on BoxField
 [-] Renumber to 0, 1, 2 in NS and reaction examples
 [x] Comment Marco Morandi 2016-09-23: add details on div sigma
 [x] Comment Jack Hale: include raw docker command
