More edits, looking good now.

--- a/src/TODO
+++ b/src/TODO
@@ -1,11 +1,12 @@
 Proofreading August 2016
 ========================
 
-[ ] Check numbering of codes
+[ ] Create web page for book: fenicsproject.org/tutorial
+[ ] Make sure download link works: fenicsproject.org/download
 [ ] Check final chapter with poisson_extended
 [ ] Check index
-[-] Create web page for book: fenicsproject.org/tutorial
-    Fix later
+[ ] Check foo()
+[x] Check numbering of codes
 [-] MSA: Add example on using UFL for manufactured solutions
     Not done, but skip for now
 [x] Page 56 lambda should be lambda + mu
