--- a/src/TODO
+++ b/src/TODO
@@ -3,9 +3,10 @@ Proofreading August 2016
 
 [ ] Create web page for book: fenicsproject.org/tutorial
 [ ] Make sure download link works: fenicsproject.org/download
-[ ] Check final chapter with poisson_extended
+[x] Check final chapter with poisson_extended
 [ ] Check index
 [ ] Check foo()
+[ ] Check version
 [x] Check numbering of codes
 [-] MSA: Add example on using UFL for manufactured solutions
     Not done, but skip for now
