Fix foo() --> foo

--- a/src/TODO
+++ b/src/TODO
@@ -4,7 +4,7 @@ Proofreading August 2016
 [ ] Create web page for book: fenicsproject.org/tutorial
 [ ] Make sure download link works: fenicsproject.org/download
 [x] Check final chapter with poisson_extended
-[ ] Check index
+[x] Check index
 [ ] Check foo()
 [ ] Check version
 [x] Check numbering of codes
