--- a/src/TODO
+++ b/src/TODO
@@ -3,10 +3,11 @@ Proofreading August 2016
 
 [ ] Create web page for book: fenicsproject.org/tutorial
 [ ] Make sure download link works: fenicsproject.org/download
+[ ] Check version
+[ ] Final proofreading
 [x] Check final chapter with poisson_extended
 [x] Check index
-[ ] Check foo()
-[ ] Check version
+[x] Check foo()
 [x] Check numbering of codes
 [-] MSA: Add example on using UFL for manufactured solutions
     Not done, but skip for now
