--- a/src/TODO
+++ b/src/TODO
@@ -5,6 +5,9 @@ Proofreading August 2016
 [ ] Make sure download link works: fenicsproject.org/download
 [ ] Check version
 [ ] Final proofreading
+[ ] Figure 10 blurry (Navier-Stokes geometry) in HTML
+[ ] Formula 49 in the Navier-Stokes example in Sphinx
+    http://hplgit.github.io/fenics-tutorial/pub/sphinx1/._ftut1004.html#variational-formulation-4
 [x] Check final chapter with poisson_extended
 [x] Check index
 [x] Check foo()
