Updates in response to comments from referee #1.
The manuscript has been updated in accordance with the recommended
changes except for the following items:

1. Page 46: Why not u_D = u_0?

   Yes we try to be consistent. Unless mistaken we have used u_D
   consistently for boundary conditions and u_0 for initial conditions.

2. Page 100: New, unexplained functionality here?

   The subs() thing is a SymPy feature which is explained in the comment
   at the end of the same line.

3. Page 131: grad_u instead?

   This would be a possibility, but we prefer to use `grad(u)` since the
   approximation is then made in just one step instead of two steps.

--- a/src/TODO
+++ b/src/TODO
@@ -3,7 +3,10 @@ Proofreading August 2016
 
 [ ] Create web page for book: fenicsproject.org/tutorial
 [ ] Make sure download link works: fenicsproject.org/download
+[ ] Mention conda packages and changing installation methods
 [ ] Check version
+[ ] Check undefined references
+[ ] Run all examples with latest development version
 [ ] Final proofreading
 [ ] Figure 10 blurry (Navier-Stokes geometry) in HTML
 [ ] Formula 49 in the Navier-Stokes example in Sphinx
@@ -119,3 +122,15 @@ Proofreading August 2016
 [x] Divide do.txt files into subdirectories for vol I, vol II and unused
 [x] poisson_vc.py is 900 lines long! Does it have to be that
     complicated?
+
+Comments to referee 1.
+
+1. Page 46: Why not u_D = u_0?
+   Yes we try to be consistent. Unless mistaken we have used u_D
+   consistently for boundary conditions and u_0 for initial conditions.
+2. Page 100: New, unexplained functionality here?
+   The subs() thing is a SymPy feature which is explained in the comment
+   at the end of the same line.
+3. Page 131: grad_u instead?
+   This would be a possibility, but we prefer to use `grad(u)` since the
+   approximation is then made in just one step instead of two steps.
