Add some more acknowledgments

--- a/src/TODO
+++ b/src/TODO
@@ -3,7 +3,7 @@ Proofreading August 2016
 
 [ ] Final proofreading
 [ ] Create web page for book: fenicsproject.org/tutorial
-[ ] Add acknowledgements to 4 x referees
+[x] Add acknowledgements to 4 x referees
 [ ] Check quality of plots
 [ ] Check undefined references
 [ ] Run all examples with latest development version
