--- a/src/TODO
+++ b/src/TODO
@@ -5,11 +5,11 @@ Proofreading August 2016
 [ ] Create web page for book: fenicsproject.org/tutorial
 [x] Add acknowledgements to 4 x referees
 [ ] Check quality of plots
-[ ] Check undefined references
 [ ] Run all examples with latest development version
 [ ] Figure 10 blurry (Navier-Stokes geometry) in HTML
 [ ] Formula 49 in the Navier-Stokes example in Sphinx
     http://hplgit.github.io/fenics-tutorial/pub/sphinx1/._ftut1004.html#variational-formulation-4
+[x] Check undefined references
 [x] Make sure download link works: fenicsproject.org/download
 [x] Mention conda packages and changing installation methods
 [x] Check version
