Rewrite a paragraph in Chapter 1

--- a/src/TODO
+++ b/src/TODO
@@ -1,14 +1,15 @@
 Proofreading August 2016
 ========================
 
+[ ] Check links on web page for book
 [ ] Final proofreading
-[ ] Create web page for book: fenicsproject.org/tutorial
-[x] Add acknowledgements to 4 x referees
-[ ] Check quality of plots
 [ ] Run all examples with latest development version
+[ ] Check quality of plots
 [ ] Figure 10 blurry (Navier-Stokes geometry) in HTML
 [ ] Formula 49 in the Navier-Stokes example in Sphinx
     http://hplgit.github.io/fenics-tutorial/pub/sphinx1/._ftut1004.html#variational-formulation-4
+[x] Add acknowledgements to 4 x referees
+[x] Create web page for book: fenicsproject.org/tutorial
 [x] Check undefined references
 [x] Make sure download link works: fenicsproject.org/download
 [x] Mention conda packages and changing installation methods
