--- a/src/TODO
+++ b/src/TODO
@@ -4,12 +4,12 @@ Proofreading August 2016
 [ ] Check links on web page for book
 [ ] Final proofreading
 [ ] Run all examples with latest development version
+[ ] Publish on RTD?
 [ ] Fix scripts and publish on web page
 [ ] Check HTML version
 [x] Check quality of plots
-[ ] Figure 10 blurry (Navier-Stokes geometry) in HTML
-[ ] Formula 49 in the Navier-Stokes example in Sphinx
-    http://hplgit.github.io/fenics-tutorial/pub/sphinx1/._ftut1004.html#variational-formulation-4
+[x] Figure 10 blurry (Navier-Stokes geometry) in HTML
+[x] Formula 49 in the Navier-Stokes example in Sphinx
 [x] Add acknowledgements to 4 x referees
 [x] Create web page for book: fenicsproject.org/tutorial
 [x] Check undefined references
