Add links to all program references

--- a/src/TODO
+++ b/src/TODO
@@ -7,6 +7,8 @@ Proofreading August 2016
 [ ] Publish on RTD?
 [ ] Fix scripts and publish on web page
 [ ] Check HTML version
+[ ] Add links to all programs
+[ ] Add all programs to index
 [x] Check quality of plots
 [x] Figure 10 blurry (Navier-Stokes geometry) in HTML
 [x] Formula 49 in the Navier-Stokes example in Sphinx
