Uniform figure size

--- a/src/TODO
+++ b/src/TODO
@@ -8,8 +8,8 @@ Proofreading August 2016
 [ ] Fix scripts and publish on web page
 [ ] Check HTML version
 [ ] Improve index
-[ ] 800/0.95 for all figures
-[ ] Move old figures to separate directory
+[x] 800/0.95 for all figures
+[x] Move old figures to separate directory
 [x] Add links to all programs
 [x] Add all programs to index
 [x] Check quality of plots
