--- a/src/TODO
+++ b/src/TODO
@@ -7,7 +7,9 @@ Proofreading August 2016
 [ ] Publish on RTD?
 [ ] Fix scripts and publish on web page
 [ ] Check HTML version
-[ ] Improve index
+[x] Improve index
+[x] Index programs
+[x] Index equations
 [x] 800/0.95 for all figures
 [x] Move old figures to separate directory
 [x] Add links to all programs
