--- a/src/TODO
+++ b/src/TODO
@@ -3,10 +3,10 @@ Proofreading August 2016
 
 [ ] Check links on web page for book
 [ ] Final proofreading
-[ ] Run all examples with latest development version
 [ ] Publish on RTD?
 [ ] Fix scripts and publish on web page
 [ ] Check HTML version
+[x] Run all examples with latest development version
 [x] Improve index
 [x] Index programs
 [x] Index equations
