HTML fix 0;95;0c# Please enter the commit message for your changes. Lines starting

--- a/src/TODO
+++ b/src/TODO
@@ -4,8 +4,8 @@ Proofreading August 2016
 [ ] Check links on web page for book
 [ ] Final proofreading
 [ ] Publish on RTD?
-[ ] Fix scripts and publish on web page
 [ ] Check HTML version
+[x] Fix scripts and publish on web page
 [x] Run all examples with latest development version
 [x] Improve index
 [x] Index programs
