--- a/src/TODO
+++ b/src/TODO
@@ -5,7 +5,7 @@ Proofreading August 2016
 [ ] Final proofreading
 [ ] Publish on RTD?
 [ ] Check HTML version
-[ ] Fix animations
+[x] Fix animations
 [x] Fix scripts and publish on web page
 [x] Run all examples with latest development version
 [x] Improve index
