--- a/src/TODO
+++ b/src/TODO
@@ -1,10 +1,10 @@
 Proofreading August 2016
 ========================
 
-[ ] Check links on web page for book
+[ ] Add Springer links
 [ ] Final proofreading
-[ ] Publish on RTD?
 [ ] Check HTML version
+[x] Check links on web page for book
 [x] Fix animations
 [x] Fix scripts and publish on web page
 [x] Run all examples with latest development version
