Initial proofreading fixes

--- a/src/TODO
+++ b/src/TODO
@@ -2,6 +2,7 @@ Proofreading August 2016
 ========================
 
 [ ] Add Springer links
+[ ] Proofread table of contents
 [ ] Final proofreading
 [ ] Check HTML version
 [x] Check links on web page for book
