--- a/src/TODO
+++ b/src/TODO
@@ -4,7 +4,8 @@ Proofreading August 2016
 [ ] Add Springer links
 [ ] Proofread table of contents
 [ ] Final proofreading
-[ ] Check HTML version
+[ ] Fix blank pages in HTML output
+[x] Check HTML version
 [x] Check links on web page for book
 [x] Fix animations
 [x] Fix scripts and publish on web page
