--- a/src/TODO
+++ b/src/TODO
@@ -2,9 +2,9 @@ Proofreading August 2016
 ========================
 
 [ ] Add Springer links
-[ ] Proofread table of contents
 [ ] Final proofreading
-[ ] Fix blank pages in HTML output
+[x] Proofread table of contents
+[x] Fix blank pages in HTML output
 [x] Check HTML version
 [x] Check links on web page for book
 [x] Fix animations
