Fix bug in tutorial program (strange that this hasn't popped up before)

--- a/src/TODO
+++ b/src/TODO
@@ -3,7 +3,7 @@ Proofreading August 2016
 
 [ ] Add Springer links
 [ ] Rerun all examples with very latest development version
-[ ] Final proofreading
+[x] Final proofreading
 [x] Proofread table of contents
 [x] Fix blank pages in HTML output
 [x] Check HTML version
