--- a/src/TODO
+++ b/src/TODO
@@ -2,7 +2,7 @@ Proofreading August 2016
 ========================
 
 [ ] Add Springer links
-[ ] Rerun all examples with very latest development version
+[x] Rerun all examples with very latest development version
 [x] Final proofreading
 [x] Proofread table of contents
 [x] Fix blank pages in HTML output
