--- a/chinese/input/ftut1.tex
+++ b/chinese/input/ftut1.tex
@@ -558,7 +558,6 @@ different requirements for how to configure and build software.
 For this reason, the FEniCS Project provides prebuilt packages to make
 the installation easy, fast, and foolproof.
 
-
 \begin{notice_mdfboxadmon}[FEniCS download and installation]
 In this tutorial, we highlight two main options for installing the
 FEniCS software: Docker containers and Ubuntu packages. While the
@@ -575,9 +574,6 @@ can be found at
 \href{{https://fenicsproject.org/download}}{\nolinkurl{https://fenicsproject.org/download}}.
 \end{notice_mdfboxadmon} % title: FEniCS download and installation
 
-
-
-
 \begin{notice_mdfboxadmon}[FEniCS version: 2016.2]
 FEniCS versions are labeled 2016.1, 2016.2, 2017.1 and so on,
 where the major number indicates the year of release and the
@@ -587,9 +583,10 @@ year. This tutorial was prepared for and tested with FEniCS
 version 2016.2.
 \end{notice_mdfboxadmon} % title: FEniCS version: 2016.2
 
-
-
 \index{source}
+
+%>>>>>>>I AM HERE<<<<<<<<<<<<
+
 
 \subsection{Installation using Docker containers}
 
@@ -839,7 +836,7 @@ solves the following boundary-value problem:
 
 \begin{alignat}{2}
 - \nabla^2 u(\x) &= f(\x),\quad &&\x\mbox{ in } \Omega,
-\label{ftut:poisson1}\\ 
+\label{ftut:poisson1}\\
 u(\x) &= \ub(\x),\quad &&\x\mbox{ on } \partial \Omega\tp \label{ch:poisson0:bc}
 \end{alignat}
 Here, $u = u(\x)$ is the unknown function, $f = f(\x)$ is a
@@ -999,7 +996,7 @@ The trial and test spaces $V$ and $\hat V$ are in the present
 problem defined as
 
 \begin{align*}
-     V      &= \{v \in H^1(\Omega) : v = \ub \mbox{ on } \partial\Omega\}, \\ 
+     V      &= \{v \in H^1(\Omega) : v = \ub \mbox{ on } \partial\Omega\}, \\
     \hat{V} &= \{v \in H^1(\Omega) : v = 0 \mbox{ on } \partial\Omega\}\tp
 \end{align*}
 In short, $H^1(\Omega)$ is the mathematically well-known Sobolev space
@@ -1078,7 +1075,7 @@ For the Poisson equation, we have:
 
 \begin{align}
 a(u, v) &= \int_{\Omega} \nabla u \cdot \nabla v \dx,
-\label{ch:poisson0:vard:a}\\ 
+\label{ch:poisson0:vard:a}\\
 L(v) &= \int_{\Omega} fv \dx\tp  \label{ch:poisson0:vard:L}
 \end{align}
 From the mathematics literature, $a(u,v)$ is known as a \emph{bilinear
@@ -1509,7 +1506,7 @@ various functions.
 If/else tests are possible using the C syntax for inline branching. The
 function
 
-\[ f(x,y) = \left\lbrace\begin{array}{ll} x^2, & x, y\geq 0,\\ 
+\[ f(x,y) = \left\lbrace\begin{array}{ll} x^2, & x, y\geq 0,\\
 2, & \hbox{otherwise},\end{array}\right.\]
 is implemented as
 
@@ -1580,14 +1577,14 @@ to check for equality with a tolerance, either explicitly
 \begin{lstlisting}[language=Python,style=graycolor]
 tol = 1E-14
 def boundary(x):
-    return abs(x[0]) < tol or abs(x[1]) < tol \ 
+    return abs(x[0]) < tol or abs(x[1]) < tol \
         or abs(x[0] - 1) < tol or abs(x[1] - 1) < tol
 \end{lstlisting}
 or using the \texttt{near} command in FEniCS:
 
 \begin{lstlisting}[language=Python,style=graycolor]
 def boundary(x):
-    return near(x[0], 0, tol) or near(x[1], 0, tol) \ 
+    return near(x[0], 0, tol) or near(x[1], 0, tol) \
         or near(x[0], 1, tol) or near(x[1], 1, tol)
 \end{lstlisting}
 
@@ -2248,9 +2245,9 @@ Our model problem for time-dependent PDEs reads
 
 \begin{alignat}{2}
 {\partial u\over\partial t} &= \nabla^2 u + f \quad &&\hbox{in }\Omega\times(0, T],
-\label{ch:diffusion0:pde1}\\ 
+\label{ch:diffusion0:pde1}\\
 u &= \ub &&\hbox{on } \partial \Omega\times(0, T],
-\label{ch:diffusion0:pde1:bc}\\ 
+\label{ch:diffusion0:pde1:bc}\\
 u &= \uI &&\mbox{at } t=0\tp
 \label{ch:diffusion0:pde1:ic}
 \end{alignat}
@@ -2308,7 +2305,7 @@ is a sequence of spatial (stationary) problems for $u^{n+1}$, assuming
 $u^n$ is known from the previous time step:
 
 \begin{align}
-u^0 &= \uI, \label{ch:diffusion0:pde1:u0}\\ 
+u^0 &= \uI, \label{ch:diffusion0:pde1:u0}\\
 u^{n+1} - {\dt}\nabla^2 u^{n+1} &=  u^n + {\dt} f^{n+1},\quad n=0,1,2,\ldots
 \label{ch:diffusion0:pde1:uk}
 \end{align}
@@ -2339,7 +2336,7 @@ where
 
 \begin{align}
 a(u,v) &= \int_\Omega\left(uv + {\dt}
-\nabla u\cdot \nabla v\right) \dx, \label{ch:diffusion0:pde1:a}\\ 
+\nabla u\cdot \nabla v\right) \dx, \label{ch:diffusion0:pde1:a}\\
 L_{n+1}(v) &= \int_\Omega \left(u^n + {\dt}  f^{n+1}\right)v \dx\tp
 \label{ch:diffusion0:pde1:L}
 \end{align}
@@ -2365,7 +2362,7 @@ variational problem:
 with
 
 \begin{align}
-a_0(u,v) &= \int_\Omega uv \dx, \label{ch:diffusion0:pde1:a0}\\ 
+a_0(u,v) &= \int_\Omega uv \dx, \label{ch:diffusion0:pde1:a0}\\
 L_0(v) &= \int_\Omega \uI v \dx\tp \label{ch:diffusion0:pde1:L0}
 \end{align}
 When solving this variational problem, $u^0$ becomes the $L^2$
@@ -2810,7 +2807,7 @@ F(u; v) = \int_\Omega (q(u)\nabla u\cdot \nabla v - fv) \dx,
 and
 
 \begin{align*}
-     V      &= \{v \in H^1(\Omega) : v = \ub \mbox{ on } \partial\Omega\},\\ 
+     V      &= \{v \in H^1(\Omega) : v = \ub \mbox{ on } \partial\Omega\},\\
     \hat{V} &= \{v \in H^1(\Omega) : v = 0 \mbox{ on } \partial\Omega\}\tp
 \end{align*}
 
@@ -3025,9 +3022,9 @@ can be written as
 
 \begin{align}
 -\nabla\cdot\sigma &= f\hbox{ in }\Omega,
-\label{ftut:elast:varform:equilibrium}\\ 
+\label{ftut:elast:varform:equilibrium}\\
 \sigma &= \lambda\,\hbox{tr}\,(\varepsilon) I + 2\mu\varepsilon,
-\label{ftut:elast:varform:stresstrain}\\ 
+\label{ftut:elast:varform:stresstrain}\\
 \varepsilon &= \frac{1}{2}\left(\nabla u + (\nabla u)^{\top}\right),
 \label{ftut:elast:varform:strainu}
 \end{align}
@@ -3099,8 +3096,8 @@ where
 \begin{align}
 a(u,v) &= \int_\Omega\sigma(u) :\nabla v \dx,
 \label{ftut:elast:varform:sigma_inner_gradv}
-\\ 
-\sigma(u) &= \lambda(\nabla\cdot u)I + \mu(\nabla u + (\nabla u)^{\top}),\\ 
+\\
+\sigma(u) &= \lambda(\nabla\cdot u)I + \mu(\nabla u + (\nabla u)^{\top}),\\
 L(v) &= \int_\Omega f\cdot v\dx + \int_{\partial\Omega_T}
 T\cdot v\ds\tp
 \end{align}
@@ -3315,13 +3312,13 @@ $\mu = \varrho = L = 1$, $W$ as $W/L$ ($\delta^{-1}$), $g=\gamma$, and
 $\lambda=\beta$.
 
 
-\begin{figure}[!ht]  % 
+\begin{figure}[!ht]  %
   \centerline{\includegraphics[width=0.95\linewidth]{fig/elasticity.png}}
   \caption{
   Plot of gravity-induced deflection in a clamped beam for the elasticity problem.
   }
 \end{figure}
-%\clearpage % flush figures 
+%\clearpage % flush figures
 
 
 % !split
@@ -3350,7 +3347,7 @@ for the velocity $u$ and pressure $p$ in an incompressible fluid:
 \begin{align}
   \label{ftut1:ns:momentum}
   \varrho\left(\frac{\partial u}{\partial t} +
-  u \cdot \nabla u\right) &= \nabla\cdot\sigma(u, p) + f, \\ 
+  u \cdot \nabla u\right) &= \nabla\cdot\sigma(u, p) + f, \\
   \label{ftut1:ns:continuity}
   \nabla \cdot u &= 0.
 \end{align}
@@ -3419,7 +3416,7 @@ The variational problem for this first step is
       & \langle {\varrho(u^{\star} - u^{n}) / \dt},{v} \rangle
       + \langle {\varrho u^{n} \cdot \nabla u^{n}},{v} \rangle
       + \nonumber
-        \langle {\sigma(u^{n+\frac{1}{2}}, p^{n})},{\epsilon(v)} \rangle \\ 
+        \langle {\sigma(u^{n+\frac{1}{2}}, p^{n})},{\epsilon(v)} \rangle \\
       &\quad\quad\quad\quad\quad
       + \langle {p^{n} n},{v} \rangle_{\partial\Omega}
       - \langle {\mu\nabla u^{n+\frac{1}{2}}\cdot n},{v} \rangle_{\partial\Omega}
@@ -3612,7 +3609,7 @@ equations (dropping bars after the scaling):
 
 \begin{align*}
 \frac{\partial u}{\partial t} + \mathrm{Re}\, u\cdot\nabla u
-&= -\nabla p + \nabla^2 u,\\ 
+&= -\nabla p + \nabla^2 u,\\
 \nabla\cdot u &= 0\tp
 \end{align*}
 Here, $\mathrm{Re} = \varrho UH/\mu$ is the Reynolds number. Because
@@ -3814,10 +3811,10 @@ def sigma(u, p):
     return 2*mu*epsilon(u) - p*Identity(len(u))
 
 # Define variational problem for step 1
-F1 = rho*dot((u - u_n) / k, v)*dx + \ 
-     rho*dot(dot(u_n, nabla_grad(u_n)), v)*dx \ 
-   + inner(sigma(U, p_n), epsilon(v))*dx \ 
-   + dot(p_n*n, v)*ds - dot(mu*nabla_grad(U)*n, v)*ds \ 
+F1 = rho*dot((u - u_n) / k, v)*dx + \
+     rho*dot(dot(u_n, nabla_grad(u_n)), v)*dx \
+   + inner(sigma(U, p_n), epsilon(v))*dx \
+   + dot(p_n*n, v)*ds - dot(mu*nabla_grad(U)*n, v)*ds \
    - dot(f, v)*dx
 a1 = lhs(F1)
 L1 = rhs(F1)
@@ -4244,10 +4241,10 @@ def sigma(u, p):
     return 2*mu*epsilon(u) - p*Identity(len(u))
 
 # Define variational problem for step 1
-F1 = rho*dot((u - u_n) / k, v)*dx \ 
-   + rho*dot(dot(u_n, nabla_grad(u_n)), v)*dx \ 
-   + inner(sigma(U, p_n), epsilon(v))*dx \ 
-   + dot(p_n*n, v)*ds - dot(mu*nabla_grad(U)*n, v)*ds \ 
+F1 = rho*dot((u - u_n) / k, v)*dx \
+   + rho*dot(dot(u_n, nabla_grad(u_n)), v)*dx \
+   + inner(sigma(U, p_n), epsilon(v))*dx \
+   + dot(p_n*n, v)*ds - dot(mu*nabla_grad(U)*n, v)*ds \
    - dot(f, v)*dx
 a1 = lhs(F1)
 L1 = rhs(F1)
@@ -4373,11 +4370,11 @@ advection--diffusion--reaction equations:
   \label{ftut1:reactionsystem:system:1}
   \frac{\partial u_1}{\partial t} +
   w \cdot \nabla u_1 - \nabla\cdot(\epsilon\nabla u_1)
-    &= f_1 -K u_1 u_2, \\ 
+    &= f_1 -K u_1 u_2, \\
   \label{ftut1:reactionsystem:system:2}
   \frac{\partial u_2}{\partial t} +
   w \cdot \nabla u_2 - \nabla\cdot(\epsilon\nabla u_2)
-    &= f_2 -K u_1 u_2, \\ 
+    &= f_2 -K u_1 u_2, \\
   \label{ftut1:reactionsystem:system:3}
   \frac{\partial u_3}{\partial t} +
   w \cdot \nabla u_3 - \nabla\cdot(\epsilon\nabla u_3)
@@ -4425,14 +4422,14 @@ solving the following coupled system of nonlinear PDEs:
 \begin{align}
   \label{ftut1:reactionsystem:full}
   \varrho\left(\frac{\partial w}{\partial t} +
-  w \cdot \nabla w\right) &= \nabla\cdot\sigma(w, p) + f, \\ 
-  \nabla \cdot w &= 0, \\ 
+  w \cdot \nabla w\right) &= \nabla\cdot\sigma(w, p) + f, \\
+  \nabla \cdot w &= 0, \\
   \frac{\partial u_1}{\partial t} +
   w \cdot \nabla u_1 - \nabla\cdot(\epsilon\nabla u_1)
-    &= f_1 - K u_1 u_2, \\ 
+    &= f_1 - K u_1 u_2, \\
   \frac{\partial u_2}{\partial t} +
   w \cdot \nabla u_2 - \nabla\cdot(\epsilon\nabla u_2)
-    &= f_2 - K u_1 u_2, \\ 
+    &= f_2 - K u_1 u_2, \\
   \frac{\partial u_3}{\partial t} +
   w \cdot \nabla u_3 - \nabla\cdot(\epsilon\nabla u_3)
     &= f_3 + K u_1 u_2 - K u_3.
@@ -4471,14 +4468,14 @@ the test vector function. The inner product results in
   \label{ftut1:reactionsystem:varproblem}
   & \int_{\Omega}
   (\dt^{-1} (u_1^{n+1} - u_1^n) v_1 + w \cdot \nabla u^{n+1}_1 \, v_1
-  + \epsilon \nabla u^{n+1}_1 \cdot \nabla v_1) \dx \\ 
+  + \epsilon \nabla u^{n+1}_1 \cdot \nabla v_1) \dx \\
   + & \int_{\Omega} (\dt^{-1} (u_2^{n+1} - u_2^n) v_2
   + w \cdot \nabla u^{n+1}_2 \, v_2
-  + \epsilon \nabla u^{n+1}_2 \cdot \nabla v_2) \dx \nonumber \\ 
+  + \epsilon \nabla u^{n+1}_2 \cdot \nabla v_2) \dx \nonumber \\
   + & \int_{\Omega} (\dt^{-1} (u_3^{n+1} - u_3^n) v_3
   + w \cdot \nabla u^{n+1}_3 \, v_3
-  + \epsilon \nabla u^{n+1}_3 \cdot \nabla v_3) \dx \nonumber \\ 
-  - & \int_{\Omega} (f_1 v_1 + f_2 v_2 + f_3 v_3) \dx \nonumber \\ 
+  + \epsilon \nabla u^{n+1}_3 \cdot \nabla v_3) \dx \nonumber \\
+  - & \int_{\Omega} (f_1 v_1 + f_2 v_2 + f_3 v_3) \dx \nonumber \\
   - & \int_{\Omega} (-K u^{n+1}_1 u^{n+1}_2 v_1 - K u^{n+1}_1
   u^{n+1}_2 v_2 + K u^{n+1}_1 u^{n+1}_2 v_3 - K u^{n+1}_3 v_3) \dx = 0.
   \nonumber
@@ -4604,12 +4601,12 @@ express the nonlinear variational problem
 (\ref{ftut1:reactionsystem:varproblem}):
 
 \begin{lstlisting}[language=Python,style=graycolor]
-F = ((u_1 - u_n1) / k)*v_1*dx + dot(w, grad(u_1))*v_1*dx \ 
-  + eps*dot(grad(u_1), grad(v_1))*dx + K*u_1*u_2*v_1*dx  \ 
-  + ((u_2 - u_n2) / k)*v_2*dx + dot(w, grad(u_2))*v_2*dx \ 
-  + eps*dot(grad(u_2), grad(v_2))*dx + K*u_1*u_2*v_2*dx  \ 
-  + ((u_3 - u_n3) / k)*v_3*dx + dot(w, grad(u_3))*v_3*dx \ 
-  + eps*dot(grad(u_3), grad(v_3))*dx - K*u_1*u_2*v_3*dx + K*u_3*v_3*dx \ 
+F = ((u_1 - u_n1) / k)*v_1*dx + dot(w, grad(u_1))*v_1*dx \
+  + eps*dot(grad(u_1), grad(v_1))*dx + K*u_1*u_2*v_1*dx  \
+  + ((u_2 - u_n2) / k)*v_2*dx + dot(w, grad(u_2))*v_2*dx \
+  + eps*dot(grad(u_2), grad(v_2))*dx + K*u_1*u_2*v_2*dx  \
+  + ((u_3 - u_n3) / k)*v_3*dx + dot(w, grad(u_3))*v_3*dx \
+  + eps*dot(grad(u_3), grad(v_3))*dx - K*u_1*u_2*v_3*dx + K*u_3*v_3*dx \
   - f_1*v_1*dx - f_2*v_2*dx - f_3*v_3*dx
 \end{lstlisting}
 
@@ -4693,12 +4690,12 @@ K = Constant(K)
 eps = Constant(eps)
 
 # Define variational problem
-F = ((u_1 - u_n1) / k)*v_1*dx + dot(w, grad(u_1))*v_1*dx \ 
-  + eps*dot(grad(u_1), grad(v_1))*dx + K*u_1*u_2*v_1*dx  \ 
-  + ((u_2 - u_n2) / k)*v_2*dx + dot(w, grad(u_2))*v_2*dx \ 
-  + eps*dot(grad(u_2), grad(v_2))*dx + K*u_1*u_2*v_2*dx  \ 
-  + ((u_3 - u_n3) / k)*v_3*dx + dot(w, grad(u_3))*v_3*dx \ 
-  + eps*dot(grad(u_3), grad(v_3))*dx - K*u_1*u_2*v_3*dx + K*u_3*v_3*dx \ 
+F = ((u_1 - u_n1) / k)*v_1*dx + dot(w, grad(u_1))*v_1*dx \
+  + eps*dot(grad(u_1), grad(v_1))*dx + K*u_1*u_2*v_1*dx  \
+  + ((u_2 - u_n2) / k)*v_2*dx + dot(w, grad(u_2))*v_2*dx \
+  + eps*dot(grad(u_2), grad(v_2))*dx + K*u_1*u_2*v_2*dx  \
+  + ((u_3 - u_n3) / k)*v_3*dx + dot(w, grad(u_3))*v_3*dx \
+  + eps*dot(grad(u_3), grad(v_3))*dx - K*u_1*u_2*v_3*dx + K*u_3*v_3*dx \
   - f_1*v_1*dx - f_2*v_2*dx - f_3*v_3*dx
 
 # Create time series for reading velocity data
@@ -4882,19 +4879,19 @@ where the Dirichlet and Neumann conditions apply, respectively. The
 complete boundary-value problem can be written as
 
 \begin{alignat}{2}
-    - \nabla^2 u &= f \quad&&\mbox{in } \Omega,  \\ 
-    u &= \ub &&\mbox{on } \GD,       \\ 
+    - \nabla^2 u &= f \quad&&\mbox{in } \Omega,  \\
+    u &= \ub &&\mbox{on } \GD,       \\
     - {\partial u\over\partial n} &= g &&\mbox{on } \GN  \tp
 \end{alignat}
 Again, we choose $u=1+x^2 + 2y^2$ as the exact solution and adjust $f$, $g$, and
 $\ub$ accordingly:
 
 \begin{align*}
-f(x, y) &= -6,\\ 
+f(x, y) &= -6,\\
 g(x, y) &= \left\lbrace\begin{array}{ll}
-0, & \quad y=0,\\ 
+0, & \quad y=0,\\
 4, & \quad y=1,
-\end{array}\right.\\ 
+\end{array}\right.\\
 \ub(x, y) &= 1 + x^2 + 2y^2\tp
 \end{align*}
 
@@ -4940,7 +4937,7 @@ in the standard notation $a(u,v)=L(v)$ is straightforward with
 
 \begin{align}
 a(u, v) &= \int_{\Omega} \nabla u \cdot \nabla v \dx,
-\label{ftut:poisson2:vard:a}\\ 
+\label{ftut:poisson2:vard:a}\\
 L(v) &= \int_{\Omega} fv \dx -
 \int_{\GN} gv \ds\tp  \label{ftut:poisson2:vard:L}
 \end{align}
@@ -5013,9 +5010,9 @@ boundary. Let us return to the case from Section~\ref{ch:poisson0:DN}
 and redefine the problem in terms of two Dirichlet conditions:
 
 \begin{alignat*}{2}
-    - \nabla^2 u &= f \quad&&\mbox{in } \Omega, \\ 
-    u &= u_{_\mathrm{L}} &&\mbox{on } \GD^{^{\mathrm{L}}}, \\ 
-    u &= u_{_\mathrm{R}} &&\mbox{on } \GD^{^{\mathrm{R}}}, \\ 
+    - \nabla^2 u &= f \quad&&\mbox{in } \Omega, \\
+    u &= u_{_\mathrm{L}} &&\mbox{on } \GD^{^{\mathrm{L}}}, \\
+    u &= u_{_\mathrm{R}} &&\mbox{on } \GD^{^{\mathrm{R}}}, \\
     - {\partial u\over\partial n} &= g &&\mbox{on } \GN \tp
 \end{alignat*}
 Here, $\GD^{^{\mathrm{L}}}$ is the left boundary $x=0$, while
@@ -5341,15 +5338,15 @@ the recommended way to work with subdomains.
 
 % May not work if the dofs are renumbered
 % ===== Vectorized version of subdomain definitions =====
-% 
+%
 % To speed up this code, we can vectorize the expressions:
-% 
+%
 % !bc pycod
 % materials = CellFunction('size_t', mesh)
 % materials.set_all(0)  # "the rest"
 % for m, subdomain in enumerate(subdomains[1:], 1):
 % subdomain.mark(materials, m)
-% 
+%
 % kappa_values = kappa
 % V0 = FunctionSpace(mesh, 'DG', 0)
 % kappa = Function(V0)
@@ -5488,12 +5485,12 @@ With the notation above, the model problem to be solved with multiple
 Dirichlet, Neumann, and Robin conditions can be formulated as follows:
 
 \begin{alignat}{2}
--\nabla\cdot(\kappa\nabla u) &= f \quad&&\mbox{in } \Omega, \label{ch:poisson0:2D:DN3}\\ 
+-\nabla\cdot(\kappa\nabla u) &= f \quad&&\mbox{in } \Omega, \label{ch:poisson0:2D:DN3}\\
 u &= \ub^i &&\mbox{on } \GD^i,\quad i=0,1,\ldots
-\label{ch:poisson0:2D:DN3:bcD}\\ 
+\label{ch:poisson0:2D:DN3:bcD}\\
 -\kappa{\partial u\over\partial n} &= g_i &&\mbox{on } \GN^i,\quad
 i=0,1,\ldots
-\label{ch:poisson0:2D:DN3:bcN}\\ 
+\label{ch:poisson0:2D:DN3:bcN}\\
 -\kappa{\partial u\over\partial n} &= r_i(u-s_i) \quad&&\mbox{on } \GR^i,\quad
 i=0,1,\ldots
 \label{ch:poisson0:2D:DN3:bcR}
@@ -5518,7 +5515,7 @@ we obtain
 -\int_{\partial\Omega} \kappa\frac{\partial u}{\partial n}v \ds
 &=
 -\sum_i\int_{\GN^i} \kappa\frac{\partial u}{\partial n} \ds
--\sum_i\int_{\GR^i} \kappa\frac{\partial u}{\partial n} \ds\\ 
+-\sum_i\int_{\GR^i} \kappa\frac{\partial u}{\partial n} \ds\\
 &=
 \sum_i\int_{\GN^i}g_i \ds +
 \sum_i\int_{\GR^i}r_i(u-s_i) \ds\tp
@@ -5548,7 +5545,7 @@ We then have
 \begin{align}
 a(u, v) &= \int_{\Omega} \kappa\nabla u\cdot \nabla v \dx
 + \sum_i\int_{\GR^i}r_iuv \ds,
-\label{ch:poisson0:2D:DN3:var:a}\\ 
+\label{ch:poisson0:2D:DN3:var:a}\\
 L(v) &= \int_{\Omega} fv \dx -
 \sum_i\int_{\GN^i} g_i v \ds + \sum_i\int_{\GR^i}r_is_iv \ds\tp
 \label{ch:poisson0:2D:DN3:var:L}
@@ -5739,7 +5736,7 @@ for i in boundary_conditions:
         r, s = boundary_conditions[i]['Robin']
         integrals_R.append(r*(u - s)*v*ds(i))
 
-F = kappa*dot(grad(u), grad(v))*dx + \ 
+F = kappa*dot(grad(u), grad(v))*dx + \
     sum(integrals_R) - f*v*dx + sum(integrals_N)
 a, L = lhs(F), rhs(F)
 \end{lstlisting}
@@ -5902,9 +5899,9 @@ $z$-coordinate. Next, we consider Maxwell's equation to derive a
 Poisson equation for the magnetic field (or rather its potential):
 
 \begin{align}
-  \nabla\cdot  D &= \varrho, \\ 
-  \nabla\cdot  B &= 0, \\ 
-  \nabla\times E &= -\frac{\partial B}{\partial t}, \\ 
+  \nabla\cdot  D &= \varrho, \\
+  \nabla\cdot  B &= 0, \\
+  \nabla\times E &= -\frac{\partial B}{\partial t}, \\
   \nabla\times H &= \frac{\partial D}{\partial t} + J.
 \end{align}
 Here, $D$ is the displacement field, $B$ is the magnetic
@@ -5937,7 +5934,7 @@ thus need to solve the following 2D Poisson problem for the
 $z$-component $A_z$ of the magnetic vector potential:
 
 \begin{align}
-  - \nabla \cdot (\mu^{-1} \nabla A_z) &= J_z \quad \text{in } \Real^2, \\ 
+  - \nabla \cdot (\mu^{-1} \nabla A_z) &= J_z \quad \text{in } \Real^2, \\
   \lim_{|(x, y)| \rightarrow \infty} A_z &= 0.
 \end{align}
 Since we cannot solve this problem on an infinite domain, we will
@@ -5970,7 +5967,7 @@ integral vanishes due to the Dirichlet condition, we obtain
 or, in other words, $a(A_z, v) = L(v)$ with
 
 \begin{align}
-  a(A_z, v) &= \int_{\Omega} \mu^{-1} \nabla A_z \cdot \nabla v \dx, \\ 
+  a(A_z, v) &= \int_{\Omega} \mu^{-1} \nabla A_z \cdot \nabla v \dx, \\
   L(v) &= \int_{\Omega} J_z v \dx.
 \end{align}
 
@@ -6461,7 +6458,7 @@ def test_solver():
             # Compute maximum error at vertices
             vertex_values_u_D = u_D.compute_vertex_values(mesh)
             vertex_values_u  = u.compute_vertex_values(mesh)
-            error_max = np.max(np.abs(vertex_values_u_D - \ 
+            error_max = np.max(np.abs(vertex_values_u_D - \
                                       vertex_values_u))
 
             # Check maximum error
@@ -6680,7 +6677,7 @@ the initial residual.
 
 % To get a printout of the number of actual iterations to reach the
 % topping criterion, we can insert
-% 
+%
 % !bc pycod
 % set_log_level(PROGRESS)
 % set_log_level(DEBUG)
@@ -6911,7 +6908,7 @@ which is nothing but a linear system,
 where the entries of $A$ and $b$ are given by
 
 \begin{align*}
-  A_{ij} &= a(\phi_j, \hat{\phi}_i), \\ 
+  A_{ij} &= a(\phi_j, \hat{\phi}_i), \\
   b_i &= L(\hat\phi_i)\tp
 \end{align*}
 
@@ -7394,7 +7391,7 @@ problem with a single Dirichlet boundary condition:
 
 \begin{alignat}{2}
     - \nabla\cdot(\kappa\nabla u) &= f \quad &&\mbox{in } \Omega,
-\label{ch:poisson0:2D:varcoeff} \\ 
+\label{ch:poisson0:2D:varcoeff} \\
     u &= \ub \quad &&\mbox{on}\  \partial\Omega\tp
 \end{alignat}
 Let us continue to use our favorite solution $u(x,y)=1+x^2+2y^2$ and
@@ -7525,7 +7522,7 @@ projection $w = P_W g$ into $W$ is the variational problem
 for all test functions $v\in W$. In other words, we have a
 standard variational problem $a(w, v) = L(v)$ where now
 \begin{align}
-a(w, v) &= \int_\Omega w v \dx,\\ 
+a(w, v) &= \int_\Omega w v \dx,\\
 L(v) &= \int_\Omega g v \dx\tp
 \end{align}
 Note that when the functions in $W$ are vector-valued, as is the case
@@ -8177,11 +8174,11 @@ exact fluxes $-\kappa\partial u/\partial x$ along the same line as above:
     # Plot the numerical and exact flux along the same line
     flux_u = flux(u, kappa)
     flux_u_x, flux_u_y = flux_u.split(deepcopy=True)
-    flux2_x = flux_u_x if flux_u_x.ufl_element().degree() == 1 \ 
+    flux2_x = flux_u_x if flux_u_x.ufl_element().degree() == 1 \
               else interpolate(flux_x,
                    FunctionSpace(u.function_space().mesh(), 'P', 1))
     flux_u_x_box = FEniCSBoxField(flux_u_x, (nx,ny))
-    x, flux_u_val, y_fixed, snapped = \ 
+    x, flux_u_val, y_fixed, snapped = \
        flux_u_x_box.gridline(start, direction=X)
     y = y_fixed
     plt.figure()
@@ -8254,7 +8251,7 @@ $f = -\nabla\cdot(\kappa\nabla u)$:
 
 \begin{lstlisting}[language=Python,style=graycolor]
 kappa = 1
-f = sym.diff(-kappa*sym.diff(u, x), x) + \ 
+f = sym.diff(-kappa*sym.diff(u, x), x) + \
     sym.diff(-kappa*sym.diff(u, y), y)
 f = sym.simplify(f)
 f_code = sym.printing.ccode(f)
@@ -8315,4 +8312,3 @@ PS: \emph{Stay tuned for the FEniCS Tutorial Volume 2!}
 
 \end{document}
 % #endif
-
