Translate Chapter 1 and some work on Chapter 2

--- a/chinese/input/ftut1.tex
+++ b/chinese/input/ftut1.tex
@@ -585,9 +585,6 @@ version 2016.2.
 
 \index{source}
 
-%>>>>>>>I AM HERE<<<<<<<<<<<<
-
-
 \subsection{Installation using Docker containers}
 
 \index{Docker}
@@ -601,8 +598,6 @@ on all operating systems, including Linux, Mac, and Windows.
 
 \index{Docker}
 \index{performance}
-
-
 
 To use FEniCS containers, you must first install the Docker
 platform. Docker installation is simple and instructions are available
@@ -635,7 +630,6 @@ docker run --rm -ti -v `pwd`:/home/fenics/shared -w
 -c "export TERM=xterm; bash -i"'
 \end{Verbatim}
 
-
 \begin{notice_mdfboxadmon}[Sharing files with FEniCS containers]
 When you run a FEniCS session using \texttt{fenicsproject run}, it will
 automatically share your current working directory (the directory
@@ -649,8 +643,6 @@ recommended that you edit your programs using your favorite editor
 (such as Emacs or Vim) on your host system and use the FEniCS session
 only to run your program(s).
 \end{notice_mdfboxadmon} % title: Sharing files with FEniCS containers
-
-
 
 \index{editor}
 \index{Emacs}
@@ -677,7 +669,6 @@ This will add the FEniCS package archive (PPA) to your Ubuntu
 computer's list of software sources and then install FEniCS. It will
 will also automatically install packages for dependencies of FEniCS.
 
-
 \begin{warning_mdfboxadmon}[Watch out for old packages!]
 In addition to being available from the FEniCS PPA, the FEniCS
 software is also part of the official Ubuntu repositories. However,
@@ -687,15 +678,11 @@ official Ubuntu repositories might contain an outdated version of
 FEniCS. For this reason, it is better to install from the FEniCS PPA.
 \end{warning_mdfboxadmon} % title: Watch out for old packages!
 
-
-
 \subsection{Testing your installation}
 
 Once you have installed FEniCS, you should make a quick test to see
 that your installation works properly. To do this, type the following
 command in a FEniCS-enabled\footnote{For users of FEniCS containers, this means first running the command \texttt{fenicsproject run}.} terminal:
-
-
 
 \begin{Verbatim}[frame=lines,label=\fbox{{\tiny Terminal}},framesep=2.5mm,framerule=0.7pt,fontsize=\fontsize{9pt}{9pt}]
 Terminal> python -c 'import fenics'
@@ -738,7 +725,6 @@ computing with Python
 
 \index{Python}
 
-
 \begin{warning_mdfboxadmon}[Python versions]
 Python comes in two versions, 2 and 3, and these are not compatible.
 FEniCS works with both versions of Python. All the
@@ -758,8 +744,6 @@ a form that looks the same in Python 2 and 3.
 % To start a FEniCS Python 3 session, users of FEniCS containers should
 % run the command \texttt{fenicsproject run stable-py3}.
 \end{warning_mdfboxadmon} % title: Python versions
-
-
 
 \subsection{The finite element method}
 \label{ftut:fembooks}
@@ -1078,6 +1062,7 @@ a(u, v) &= \int_{\Omega} \nabla u \cdot \nabla v \dx,
 \label{ch:poisson0:vard:a}\\
 L(v) &= \int_{\Omega} fv \dx\tp  \label{ch:poisson0:vard:L}
 \end{align}
+
 From the mathematics literature, $a(u,v)$ is known as a \emph{bilinear
 form} and $L(v)$ as a \emph{linear form}.  We shall, in every linear problem
 we solve, identify the terms with the unknown $u$ and collect them in
@@ -1122,7 +1107,7 @@ quadratic function in 2D as the exact solution, say
 \uex(x,y) = 1 +x^2 + 2y^2\tp
 \end{equation}
 By inserting (\ref{ch:poisson0:impl:uex}) into the Poisson equation
-(\ref{ftut:poisson1}), we find that $\uex(x,y)$ is a solution if
+(\ref{ftut:poisson1}), we find that $\uex(x,y)$ is a solution if--> IN CASE OF
 
 \[ f(x,y) = -6,\quad \ub(x,y)=\uex(x,y)=1 + x^2 + 2y^2,\]
 regardless of the shape of the domain as long as $\uex$ is prescribed along
@@ -1140,7 +1125,6 @@ condition, and try to reproduce the exact solution.
 \index{verification}
 \index{exact solution}
 \index{method of manufactured solutions}
-
 
 \begin{notice_mdfboxadmon}[Tip: Try to verify your code with exact numerical solutions!]
 A common approach to testing the implementation of a numerical method
@@ -1165,8 +1149,6 @@ degree $r$ can reproduce polynomials of degree $r$ exactly, so this
 is the starting point for constructing a solution without numerical
 approximation errors.
 \end{notice_mdfboxadmon} % title: Tip: Try to verify your code with exact numerical solutions!
-
-
 
 \section{FEniCS implementation}
 \label{ch:poisson0:impl}
@@ -1302,7 +1284,6 @@ images, run the \texttt{fenicsproject notebook} command and follow the
 instructions. To enable plotting, make sure to run the command
 \Verb!%matplotlib inline! inside the notebook.
 
-
 \section{Dissection of the program}
 \label{ch:poisson0:impl:dissect}
 
@@ -1329,7 +1310,6 @@ solution $u$ is computed. At the end of the program, we compare the
 numerical and the exact solutions. We also plot the solution using the
 \texttt{plot} command and save the solution to a file for external
 postprocessing.
-
 
 \subsection{The important first line}
 
@@ -1402,6 +1382,11 @@ discontinuous Galerkin methods.
 \index{TestFunction@{\rm\texttt{TestFunction}}} \index{TrialFunction@{\rm\texttt{TrialFunction}}}
 \index{DirichletBC@{\rm\texttt{DirichletBC}}}
 \index{Dirichlet boundary conditions}
+
+%>>>>>>>I AM HERE<<<<<<<<<<<<
+
+
+
 
 \subsection{Defining the trial and test functions}
 
