--- a/chinese/tstextbook.cls
+++ b/chinese/tstextbook.cls
@@ -392,3 +392,4 @@ contents={\includegraphics[width=\paperwidth,height=\paperheight]{cover}}}
 \RequirePackage[most]{tcolorbox}
 \RequirePackage{booktabs}
 \RequirePackage{url}
+\RequirePackage{anslistings}
