Work on Chapter 5

--- a/chinese/input/ftut1.tex
+++ b/chinese/input/ftut1.tex
@@ -6152,12 +6152,6 @@ This example program can be found in the file \href{{https://fenicsproject.org/p
 
 \index{ft11\_magnetostatics.py@{\rm\texttt{ft11\_magnetostatics.py}}}
 
-%>>>>>>>I AM HERE<<<<<<<<<<<<
-
-
-
-
-
 % !split
 \chapter{Extensions: Improving the Poisson solver}
 \label{ch:poisson}
@@ -6435,8 +6429,6 @@ This line starts an interactive Python session which lets you
 print and plot variables, which can be very helpful for debugging.
 \end{notice_mdfboxadmon} % title: Tip: Debugging with iPython
 
-
-
 \subsection{Parameterizing the number of space dimensions}
 \label{ch:poisson0:nD}
 \index{dimension-independent code}
@@ -6690,8 +6682,6 @@ linear algebra backend is currently active. The following table
 shows an example of which linear solvers that can be available
 through FEniCS when the PETSc backend is active:
 
-
-
 {\small   % for Springer style: small table font and more vspace
 
 \vspace{4mm}
@@ -6715,7 +6705,6 @@ through FEniCS when the PETSc backend is active:
 \vspace{4mm}
 
 }
-
 
 \noindent
 The set of available preconditioners also depends on configuration and
@@ -7081,7 +7070,7 @@ coordinates, and in particular, the numbering of degrees of freedom
 and the numbering of vertices in the mesh.
 
 The function \texttt{mesh.coordinates} returns the coordinates of the
-vertices as a \texttt{numpy} array with shape $(M,d$), $M$ being the number
+vertices as a \texttt{numpy} array with shape ($M,d$), $M$ being the number
 of vertices in the mesh and $d$ being the number of space dimensions:
 
 \begin{lstlisting}[language=Python,style=graycolor]
@@ -7195,6 +7184,9 @@ for cell in cells(mesh):
     print(element.tabulate_dof_coordinates(cell))
     print(dofmap.cell_dofs(cell.index()))
 \end{lstlisting}
+
+%----------I AM HERE ----------
+
 
 \subsection{Setting the degrees of freedom}
 
