Update tex file

--- a/src/ftut1.tex
+++ b/src/ftut1.tex
@@ -6063,7 +6063,7 @@ dx = Measure('dx', domain=mesh, subdomain_data=markers)
 \end{lstlisting}
 Integrals over subdomains can then be expressed by \texttt{dx(0)}, \texttt{dx(1)},
 and so on. We use this to define the current $J_z = \pm 1\,\mathrm{A}$
-in the coppper wires:
+in the copper wires:
 
 \begin{lstlisting}[language=Python,style=graycolor]
 J_N = Constant(1.0)
