Update new version of tutorial

--- a/chinese/input/ftut1_new.tex
+++ b/chinese/input/ftut1_new.tex
@@ -381,7 +381,7 @@ commentstyle={},
 
 % ----------------- end author(s) -------------------------
 
-\date{Jun 1, 2017}
+\date{Aug 7, 2017}
 \maketitle
 
 % !split
@@ -4893,7 +4893,7 @@ $\ub$ accordingly:
 f(x, y) &= -6,\\ 
 g(x, y) &= \left\lbrace\begin{array}{ll}
 0, & \quad y=0,\\ 
-4, & \quad y=1,
+-4, & \quad y=1,
 \end{array}\right.\\ 
 \ub(x, y) &= 1 + x^2 + 2y^2\tp
 \end{align*}
@@ -4903,7 +4903,7 @@ domain $\Omega$ such that $g$ takes on the correct values at $y=0$ and
 $y=1$. One possible extension is
 
 \begin{equation*}
-g(x,y) = 4y\tp
+g(x,y) = -4y\tp
 \end{equation*}
 
 \subsection{Variational formulation}
@@ -4989,7 +4989,7 @@ The second adjustment of our program concerns the definition of \texttt{L},
 which needs to include the Neumann condition:
 
 \begin{lstlisting}[language=Python,style=graycolor]
-g = Expression('4*x[1]', degree=1)
+g = Expression('-4*x[1]', degree=1)
 L = f*v*dx - g*v*ds
 \end{lstlisting}
 The \texttt{ds} variable implies a boundary integral, while \texttt{dx}
@@ -6063,7 +6063,7 @@ dx = Measure('dx', domain=mesh, subdomain_data=markers)
 \end{lstlisting}
 Integrals over subdomains can then be expressed by \texttt{dx(0)}, \texttt{dx(1)},
 and so on. We use this to define the current $J_z = \pm 1\,\mathrm{A}$
-in the coppper wires:
+in the copper wires:
 
 \begin{lstlisting}[language=Python,style=graycolor]
 J_N = Constant(1.0)
@@ -6166,7 +6166,7 @@ for (i, wire) in enumerate(wires_S):
     domain.set_subdomain(2 + n + i, wire)
 
 # Create mesh
-mesh = generate_mesh(domain, 32)
+mesh = generate_mesh(domain, 128)
 
 # Define function space
 V = FunctionSpace(mesh, 'P', 1)
@@ -6184,17 +6184,17 @@ J_S = Constant(-1.0)
 
 # Define magnetic permeability
 class Permeability(Expression):
-    def __init__(self, mesh, **kwargs):
+    def __init__(self, markers, **kwargs):
         self.markers = markers
     def eval_cell(self, values, x, cell):
-        if markers[cell.index] == 0:
+        if self.markers[cell.index] == 0:
             values[0] = 4*pi*1e-7 # vacuum
-        elif markers[cell.index] == 1:
-            values[0] = 1e-5      # iron (should really be 2.5e-1)
+        elif self.markers[cell.index] == 1:
+            values[0] = 1e-5      # iron (should really be 6.3e-3)
         else:
-            values[0] = -6.4e-6   # copper (yes, it's negative!)
+            values[0] = 1.26e-6   # copper
 
-mu = Permeability(mesh, degree=1)
+mu = Permeability(markers, degree=1)
 
 # Define variational problem
 A_z = TrialFunction(V)
@@ -7152,7 +7152,7 @@ coordinates, and in particular, the numbering of degrees of freedom
 and the numbering of vertices in the mesh.
 
 The function \texttt{mesh.coordinates} returns the coordinates of the
-vertices as a \texttt{numpy} array with shape $(M,d$), $M$ being the number
+vertices as a \texttt{numpy} array with shape $(M,d)$, $M$ being the number
 of vertices in the mesh and $d$ being the number of space dimensions:
 
 \begin{lstlisting}[language=Python,style=graycolor]
