Update generated tex file

--- a/src/ftut1.tex
+++ b/src/ftut1.tex
@@ -381,7 +381,7 @@ commentstyle={},
 
 % ----------------- end author(s) -------------------------
 
-\date{Aug 7, 2017}
+\date{Aug 8, 2017}
 \maketitle
 
 % !split
@@ -6033,7 +6033,7 @@ A detail of the mesh is shown in Figure~\ref{ftut1:fig:magnetostatics:mesh}.
 \begin{figure}[!ht]  % ftut1:fig:magnetostatics:mesh
   \centerline{\includegraphics[width=0.95\linewidth]{fig/magnetostatics_mesh.png}}
   \caption{
-  Plot of (part of) the mesh generated for the magnetostatics test problem. The subdomains for the iron cylinder and copper wires are clearly visible \label{ftut1:fig:magnetostatics:mesh}
+  Plot of (part of) the mesh generated for the magnetostatics test problem. The subdomains for the iron cylinder and copper wires are clearly visible. \label{ftut1:fig:magnetostatics:mesh}
   }
 \end{figure}
 %\clearpage % flush figures ftut1:fig:magnetostatics:mesh
