--- a/src/ftut1.tex
+++ b/src/ftut1.tex
@@ -381,7 +381,7 @@ commentstyle={},
 
 % ----------------- end author(s) -------------------------
 
-\date{Aug 8, 2017}
+\date{Sep 18, 2017}
 \maketitle
 
 % !split
@@ -2094,7 +2094,7 @@ p.R0 = 0.3
 
 \subsection{Defining the variational problem}
 
-The variational problem and the boundary conditions are the same as in
+The variational problem is the same as in
 our first Poisson problem, but we may introduce \texttt{w} instead of \texttt{u} as
 primary unknown and \texttt{p} instead of \texttt{f} as right-hand side function:
 
