Small fix (comment from Andreas Felderer)

--- a/src/ftut1.tex
+++ b/src/ftut1.tex
@@ -165,7 +165,7 @@ commentstyle={},
 % Ensure copyright on chapter pages (only)
 \fancypagestyle{bchap}{
   \fancyhf{}
-  \fancyfoot[C]{{\footnotesize \copyright\ 2017, Hans Petter Langtangen, Anders Logg. \\ Released under CC Attribution 4.0 license}}
+  \fancyfoot[C]{{\footnotesize \copyright\ 2018, Hans Petter Langtangen, Anders Logg. \\ Released under CC Attribution 4.0 license}}
 %  \renewcommand{\footrulewidth}{0mm}
   \renewcommand{\headrulewidth}{0mm}
 }
@@ -381,7 +381,7 @@ commentstyle={},
 
 % ----------------- end author(s) -------------------------
 
-\date{Sep 18, 2017}
+\date{Oct 29, 2018}
 \maketitle
 
 % !split
@@ -1182,6 +1182,7 @@ follows:
 
 \begin{lstlisting}[language=Python,style=graycolor]
 from fenics import *
+import matplotlib.pyplot as plt
 
 # Create mesh and define function space
 mesh = UnitSquareMesh(8, 8)
@@ -1228,7 +1229,7 @@ print('error_L2  =', error_L2)
 print('error_max =', error_max)
 
 # Hold plot
-interactive()
+plt.show()
 \end{lstlisting}
 This example program can be found in the file \href{{https://fenicsproject.org/pub/tutorial/python/vol1/ft01_poisson.py}}{\nolinkurl{ft01_poisson.py}}.
 
